# yolov8_nas_rust

./: Cargo.toml
src/: main.rs
