[package]
name = "yolov8_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
opencv = "0.86.0"
ort = { version = "1.16.2", features = ["download-binaries"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
